--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -4,5 +4,9 @@
 
 #root {
     height: 100vh;
-    @apply sm:max-w-[640px] md:max-w-[768px] lg:max-w-[1024px] xl:max-w-[1280px] mx-auto p-4
+    @apply sm:max-w-[640px] md:max-w-[768px] lg:max-w-[1024px] xl:max-w-[1280px] mx-auto p-4;
+}
+
+input {
+    @apply focus:border-blue-500 focus:outline-none;
 }
